--- a/package.json
+++ b/package.json
@@ -9,18 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "@radix-ui/react-label": "2.0.0",
+    "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-tabs": "1.0.4",
+    "@react-three/drei": "9.75.0",
+    "@react-three/fiber": "8.13.3",
+    "@react-three/postprocessing": "2.14.13",
+    "@types/three": "0.152.1",
+    "chart.js": "^4.4.1",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.0.0",
+    "framer-motion": "10.16.4",
+    "lucide-react": "0.260.0",
+    "next": "13.5.7",
+    "postprocessing": "6.32.2",
+    "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "18.2.0",
+    "tailwind-merge": "2.0.0",
+    "tailwindcss-animate": "1.0.7",
+    "three": "0.152.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "eslint-config-next": "15.0.3",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
