--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@radix-ui/react-label": "2.0.0",
     "@radix-ui/react-slot": "1.0.2",
     "@radix-ui/react-tabs": "1.0.4",
-    "@react-three/drei": "^9.117.3",
+    "@react-three/drei": "9.75.0",
     "@react-three/fiber": "8.13.3",
     "@react-three/postprocessing": "2.14.13",
     "@types/three": "0.152.1",
@@ -24,7 +24,7 @@
     "firebase": "^11.0.2",
     "framer-motion": "10.16.4",
     "lucide-react": "0.260.0",
-    "next": "^15.0.3",
+    "next": "13.5.7",
     "postprocessing": "6.32.2",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -39,7 +39,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "13.5.7",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
