--- a/package.json
+++ b/package.json
@@ -6,42 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:worker": "webpack --config webpack.config.js",
+    "deploy:worker": "wrangler deploy",
+    "dev:worker": "wrangler dev"
   },
   "dependencies": {
-    "@firebase/auth": "^1.8.1",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-label": "2.0.0",
-    "@radix-ui/react-slot": "1.0.2",
-    "@radix-ui/react-tabs": "1.0.4",
-    "@react-three/drei": "9.75.0",
-    "@react-three/fiber": "8.13.3",
-    "@react-three/postprocessing": "2.14.13",
-    "@types/three": "0.152.1",
-    "chart.js": "^4.4.1",
-    "class-variance-authority": "0.7.0",
-    "clsx": "2.0.0",
-    "firebase": "^11.0.2",
-    "framer-motion": "10.16.4",
-    "lucide-react": "0.260.0",
-    "next": "13.5.7",
-    "postprocessing": "6.32.2",
-    "react": "18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "18.2.0",
-    "tailwind-merge": "2.0.0",
-    "tailwindcss-animate": "1.0.7",
-    "three": "0.152.2"
+    "@cloudflare/ai": "^1.0.0",
+    "base64-js": "^1.5.1",
+    "mustache": "^4.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.7",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-loader": "^9.5.1",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
