--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/package.json",
   "name": "student-finance",
   "version": "0.1.0",
   "private": true,
@@ -14,13 +15,35 @@
   "dependencies": {
     "@cloudflare/ai": "^1.0.0",
     "@radix-ui/react-label": "^2.0.0",
+    "@react-three/drei": "^9.99.0",
+    "@react-three/fiber": "^8.15.0",
+    "@react-three/postprocessing": "^2.15.0",
     "base64-js": "^1.5.1",
+    "chart.js": "^4.0.0",
     "clsx": "^2.0.0",
+    "firebase": "^10.8.0",
+    "framer-motion": "^11.11.17",
+    "lucide-react": "^0.344.0",
     "mustache": "^4.2.0",
-    "tailwind-merge": "^2.0.0"
+    "next": "^14.1.0",
+    "postprocessing": "^6.34.1",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.0.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.160.0"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/three": "^0.160.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "ts-loader": "^9.5.1",
+    "typescript": "^5.0.0",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   }
