Update tsconfig.json to include @cloudflare/workers-types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "types": ["@cloudflare/workers-types"]
   },
   "include": [
     "next-env.d.ts",
