--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "dev:worker": "wrangler dev"
   },
   "dependencies": {
-    "@cloudflare/ai": "^1.0.0",
+    "@cloudflare/ai": "^1.2.2",
     "@radix-ui/react-label": "^2.0.0",
-    "@react-three/drei": "^9.99.0",
-    "@react-three/fiber": "^8.15.0",
-    "@react-three/postprocessing": "^2.15.0",
+    "@radix-ui/react-scroll-area": "^1.2.1",
+    "@react-three/drei": "^9.117.3",
+    "@react-three/fiber": "^8.17.10",
+    "@react-three/postprocessing": "^2.16.3",
     "base64-js": "^1.5.1",
     "chart.js": "^4.0.0",
     "clsx": "^2.0.0",
@@ -32,9 +33,10 @@
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.160.0"
+    "three": "^0.160.1"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20241112.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
@@ -43,8 +45,8 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.0.0",
-    "webpack": "^5.89.0",
+    "typescript": "^5.7.2",
+    "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   }
 }
