--- a/wrangler.toml
+++ b/wrangler.toml
@@ -12,7 +12,8 @@ index_name = "financial-data"
 [[kv_namespaces]]
 binding = "FINANCIAL_DATA"
 preview_id = "124ebe2525a745eea82914f84a4414f3"
-id = "124ebe2525a745eea82914f84a4414f3"
+id = "124ebe2525a745eea82914f84a4414f3" 
+API_KEY = ""
 
-[build]
-command = "npm run build:worker" 
+[vars]
+API_KEY = ""
