--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "base64-js": "^1.5.1",
     "chart.js": "^4.0.0",
     "clsx": "^2.0.0",
+    "date-fns": "^4.1.0",
     "firebase": "^10.8.0",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.344.0",
